turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:4: error: overloaded method value forward with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward()
  ^