turtleart.housemany.HouseMany.scala.code
override def run() {
	maison()
  right(90)
  forward()
  maison()
}

def maison() { 
	var x=30
  forward(x)
  right(90)
  forward(x)
  right(90)
  forward(x)
  right(90)
  forward(x)
  right(90)
  
  forward(x)
  right(30)
  forward(x)
  right(120)
  forward(x)
  right(120)
  forward(x)
  right(120)
  left(30)
  backward(x)
}